#69 Auth layout fix

--- a/EventManager.Client/App.razor
+++ b/EventManager.Client/App.razor
@@ -28,9 +28,9 @@
     {
         Palette = new Palette
         {
-            Primary = Colors.Red.Darken4,
-            Secondary = Colors.Red.Accent1,
-            AppbarBackground = Colors.Red.Darken4
+            Primary = Colors.DeepPurple.Darken4,
+            Secondary = Colors.Cyan.Darken4,
+            AppbarBackground = Colors.DeepPurple.Darken4
         },
         LayoutProperties = new LayoutProperties
         {
