--- a/EventManager.Client/Pages/Auth/Logout.razor
+++ b/EventManager.Client/Pages/Auth/Logout.razor
@@ -5,6 +5,7 @@
 
 @code {
 
+    /// <inheritdoc />
     protected override async Task OnInitializedAsync()
     {
         await AuthService.Logout();
