--- a/EventManager.Client/Pages/Auth/LoginPage.razor
+++ b/EventManager.Client/Pages/Auth/LoginPage.razor
@@ -5,20 +5,20 @@
     <EditForm Model="Model" OnValidSubmit="SignIn">
         <DataAnnotationsValidator />
         <div class="mb-3">
-            <MatTextField class="w-100" @bind-Value="Model.UserName" Label="User Name" Outlined="true"></MatTextField>
+            <MudTextField @bind-Value="Model.UserName" Label="User Name" FullWidth="true" Variant="Variant.Outlined" />
         </div>
         <div class="mb-3">
-            <MatTextField class="w-100" type="password" @bind-Value="Model.Password" Label="Password" Outlined="true"></MatTextField>
+            <MudTextField @bind-Value="Model.Password" Label="Password" FullWidth="true" Variant="Variant.Outlined" InputType="InputType.Password" />
         </div>
         <div class="p-1 text-center">
-            <MatButton Raised="true">Sign In</MatButton>
+            <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary">Sing In</MudButton>
         </div>
         <ValidationSummary />
     </EditForm>
     <div class="col col-12 row mt-2">
         <div class="col col-6 p-1"></div>
         <div class="col col-6 p-1 text-right">
-            <MatButton Outlined="true" @onclick="@(() => Navigate("/auth/registration"))">Registration</MatButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="@(() => Navigate("/auth/registration"))">Registration</MudButton>
         </div>
     </div>
 </AuthPanel>
