--- a/EventManager.Client/Pages/Auth/RegistrationPage.razor
+++ b/EventManager.Client/Pages/Auth/RegistrationPage.razor
@@ -3,31 +3,31 @@
 
 <AuthPanel Title="@Title">
     <EditForm Model="Model" OnValidSubmit="SignUp">
-        <DataAnnotationsValidator />
+        <DataAnnotationsValidator/>
         <div class="mb-3">
-            <MatTextField class="w-100" @bind-Value="Model.UserName" Label="User Name" Outlined="true"></MatTextField>
+            <MudTextField @bind-Value="Model.UserName" Label="User Name" FullWidth="true" Variant="Variant.Outlined"/>
         </div>
         <div class="mb-3">
-            <MatTextField type="password" class="w-100" @bind-Value="Model.Password" Label="Password" Outlined="true"></MatTextField>
+            <MudTextField InputType="InputType.Password" @bind-Value="Model.Password" Label="Password" FullWidth="true" Variant="Variant.Outlined"/>
         </div>
         <div class="mb-3">
-            <MatTextField type="password" class="w-100" @bind-Value="Model.PasswordConfirm" Label="Password Confirm" Outlined="true"></MatTextField>
+            <MudTextField InputType="InputType.Password" @bind-Value="Model.PasswordConfirm" Label="Password Confirm" FullWidth="true" Variant="Variant.Outlined"/>
         </div>
         <div class="mb-3">
-            <MatTextField type="email" class="w-100" @bind-Value="Model.Email" Label="E-Mail" Outlined="true"></MatTextField>
+            <MudTextField InputType="InputType.Email" @bind-Value="Model.Email" Label="E-mail" FullWidth="true" Variant="Variant.Outlined"/>
         </div>
         <div class="mb-3">
-            <MatTextField class="w-100" @bind-Value="Model.FullName" Label="Full Name" Outlined="true"></MatTextField>
+            <MudTextField @bind-Value="Model.FullName" Label="Full Name" FullWidth="true" Variant="Variant.Outlined"/>
         </div>
         <div class="p-1 text-center">
-            <MatButton Raised="true">Sign up</MatButton>
+            <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary">Sing Up</MudButton>
         </div>
-        <ValidationSummary />
+        <ValidationSummary/>
     </EditForm>
     <div class="col col-12 row mt-2">
         <div class="col col-6 p-1"></div>
         <div class="col col-6 p-1 text-right">
-            <MatButton Outlined="true" @onclick="@(() => Navigate("/auth/login"))">Login</MatButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="@(() => Navigate("/auth/login"))">Login</MudButton>
         </div>
     </div>
 </AuthPanel>
