--- a/EventManager.Client/Shared/Auth/AuthPanel.razor
+++ b/EventManager.Client/Shared/Auth/AuthPanel.razor
@@ -1,18 +1,32 @@
 <div class="col col-12">
     <div class="em-panel col col-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
-        <MatCard class="p-3">
-            <MatHeadline5>
-                <div class="panel-title"><strong>@Title</strong></div>
-            </MatHeadline5>
-            <div class="panel-content">
-                @ChildContent
-            </div>
-        </MatCard>
+        <MudCard class="p-3">
+            <MudCardContent>
+                <MudText Typo="Typo.h1">
+                    <div class="panel-title">
+                        <strong>@Title</strong>
+                    </div>
+                </MudText>
+                <div class="panel-content">
+                    @ChildContent
+                </div>
+            </MudCardContent>
+        </MudCard>
     </div>
 </div>
 
-@code { [Parameter]
-            public string Title { get; set; }
+@code {
 
-            [Parameter]
-            public RenderFragment ChildContent { get; set; } }
+    /// <summary>
+    /// Display title
+    /// </summary>
+    [Parameter]
+    public string Title { get; set; }
+
+    /// <summary>
+    /// Display content
+    /// </summary>
+    [Parameter]
+    public RenderFragment ChildContent { get; set; }
+
+}
