--- a/EventManager.Client/wwwroot/css/site.scss
+++ b/EventManager.Client/wwwroot/css/site.scss
@@ -390,3 +390,12 @@ app {
         background-color: $white-trans;
     }
 }
+
+
+.em-navbar {
+  background-color: $white-trans !important;
+}
+
+.em-light-box {
+  background-color: $white-trans !important;
+}
