--- a/EventManager.Client/Pages/Index.razor
+++ b/EventManager.Client/Pages/Index.razor
@@ -1,10 +1,10 @@
 ﻿@page "/"
 
-<div class="main-page">
-    <h1 class="em-page-title">Home</h1>
-    <h3>Hello There!</h3>
+<div class="main-page w-100">
+    <MudText Typo="Typo.h1" Class="em-page-title">Home</MudText>
+    <MudText Typo="Typo.h3" Class="em-page-title">Hello There!</MudText>
 
-    <div class="em-image-block text-center">
-        <img src="/images/hello-there.gif" alt="hello-there" />
+    <div class="em-image-block text-center mt-3">
+        <img src="/images/hello-there.gif" alt="hello-there"/>
     </div>
 </div>
