--- a/EventManager.Client/Shared/Navigators/MainNavigator.razor.scss
+++ b/EventManager.Client/Shared/Navigators/MainNavigator.razor.scss
@@ -1,33 +1,27 @@
 ﻿@import "../../Styles/_common.scss";
 
-.em-navbar {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
+.em-navbar-brand-outer {
+    padding: 0.5rem;
+    width: 100%;
 
-    .em-navbar-brand-outer {
+    .em-navbar-brand {
         padding: 0.5rem;
+        border-radius: $border-radius;
+        color: $white;
+        font-size: 1.6rem;
+        text-align: center;
+        transition-duration: 0.5s;
 
-        .em-navbar-brand {
-            padding: 0.5rem;
-            border-radius: $border-radius;
-            background-color: $primary;
-            color: $white;
-            font-size: 1.6rem;
-            text-align: center;
+        &:hover {
+            cursor: pointer;
+            background-color: $primary-hover !important;
+            color: $primary;
             transition-duration: 0.5s;
-
-            &:hover {
-                cursor: pointer;
-                background-color: $primary-hover;
-                color: $primary;
-                transition-duration: 0.5s;
-            }
         }
     }
+}
 
-    .em-navbar-menu {
-        flex-grow: 1;
-        overflow: auto;
-    }
+.em-navbar-menu {
+    flex-grow: 1;
+    overflow: auto;
 }
