--- a/EventManager.Client/Shared/Components/MyProfile/ChangePasswordDialog.razor
+++ b/EventManager.Client/Shared/Components/MyProfile/ChangePasswordDialog.razor
@@ -1,18 +1,25 @@
-<div class="w-100">
-    <EditForm EditContext="Context">
-        <DataAnnotationsValidator />
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" type="password" @bind-Value="PasswordUpdate.OldPassword" Label="Old Password" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => PasswordUpdate.OldPassword" />
+<MudDialog>
+    <DialogContent>
+        <div>
+            <EditForm EditContext="Context">
+                <DataAnnotationsValidator></DataAnnotationsValidator>
+                <div>
+                    <MudTextField @bind-Value="PasswordUpdate.OldPassword" Label="Old Password" FullWidth="true" InputType="InputType.Password" Variant="Variant.Outlined" />
+                    <ValidationMessage For="() => PasswordUpdate.OldPassword"></ValidationMessage>
+                </div>
+                <div>
+                    <MudTextField @bind-Value="PasswordUpdate.NewPassword" Label="New Password" FullWidth="true" InputType="InputType.Password" Variant="Variant.Outlined" />
+                    <ValidationMessage For="() => PasswordUpdate.NewPassword"></ValidationMessage>
+                </div>
+                <div>
+                    <MudTextField @bind-Value="PasswordUpdate.ConfirmNewPassword" Label="Confirm New Password" FullWidth="true" InputType="InputType.Password" Variant="Variant.Outlined" />
+                    <ValidationMessage For="() => PasswordUpdate.ConfirmNewPassword"></ValidationMessage>
+                </div>
+            </EditForm>
         </div>
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" type="password" @bind-Value="PasswordUpdate.NewPassword" Label="New Password" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => PasswordUpdate.NewPassword" />
-        </div>
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" type="password" @bind-Value="PasswordUpdate.ConfirmNewPassword" Label="Confirm New Password" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => PasswordUpdate.ConfirmNewPassword" />
-        </div>
-
-    </EditForm>
-</div>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Save">Save</MudButton>
+    </DialogActions>
+</MudDialog>
