--- a/EventManager.Client/Shared/Layouts/AuthLayout.razor
+++ b/EventManager.Client/Shared/Layouts/AuthLayout.razor
@@ -1,7 +1,5 @@
 @inherits LayoutComponentBase
 
-<BlazoredModal />
-
-<div class="p-3 h-100 w-100">
+<div class="d-flex flex-row justify-content-center align-center p-3 h-100 w-100">
     @Body
 </div>
