--- a/EventManager.Client/Pages/Notifications/MyNotificationListPage.razor
+++ b/EventManager.Client/Pages/Notifications/MyNotificationListPage.razor
@@ -1,18 +1,18 @@
 ﻿@page "/my-notifications"
 @attribute [Microsoft.AspNetCore.Authorization.Authorize]
 
-<div class="em-my-notifications">
+<div class="em-my-notifications w-100">
     <h1 class="em-page-title">My Notifications</h1>
 
-    <div class="action-bar">
-        <MatSelect TValue="int?" Label="Importance" Outlined="true" Dense="true" ValueChanged="@(val => ImportanceValueChangedEvent(val))">
-            <MatOption TValue="int?" Value="null"></MatOption>
-            <MatOption TValue="int?" Value="1">Level 1</MatOption>
-            <MatOption TValue="int?" Value="2">Level 2</MatOption>
-            <MatOption TValue="int?" Value="3">Level 3</MatOption>
-        </MatSelect>
+    <div class="action-bar blue-label">
+        <MudSelect T="int?" Label="Importance" Variant="Variant.Outlined" ValueChanged="ImportanceValueChangedEvent" >
+            <MudSelectItem T="int?" Value="null">-</MudSelectItem>
+            <MudSelectItem T="int?" Value="1">Level 1</MudSelectItem>
+            <MudSelectItem T="int?" Value="2">Level 2</MudSelectItem>
+            <MudSelectItem T="int?" Value="3">Level 3</MudSelectItem>
+        </MudSelect>
         <span class="spacer"></span>
-        <MatCheckbox TValue="bool" Label="Show unread notifications" ValueChanged="@(val => ShowReadValueChangedEvent(val))"></MatCheckbox>
+        <MudCheckBox T="bool" Label="Show all" CheckedChanged="ShowReadValueChangedEvent" />
     </div>
     @if (IsLoading)
     {
