--- a/EventManager.Client/Shared/Components/Notifications/MyNotificationComponent.razor
+++ b/EventManager.Client/Shared/Components/Notifications/MyNotificationComponent.razor
@@ -34,6 +34,9 @@
 }
 
 @code {
+    /// <summary>
+    /// Notification source
+    /// </summary>
     [Parameter]
     public NotificationDto Notification { get; set; }
 }
