--- a/EventManager.Client/Shared/Components/Tasks/TaskDialog.razor
+++ b/EventManager.Client/Shared/Components/Tasks/TaskDialog.razor
@@ -1,17 +1,25 @@
-﻿<div class="w-100">
-    <EditForm EditContext="@Context">
-        <DataAnnotationsValidator />
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Title" Label="Title" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => Model.Title" />
+﻿<MudDialog>
+    <DialogContent>
+        <div>
+            <EditForm EditContext="Context">
+                <DataAnnotationsValidator></DataAnnotationsValidator>
+                <div>
+                    <MudTextField @bind-Value="Model.Title" Label="Title" FullWidth="true" Variant="Variant.Outlined"/>
+                    <ValidationMessage For="() => Model.Title"></ValidationMessage>
+                </div>
+                <div>
+                    <MudTextField @bind-Value="Model.Description" Label="Description" FullWidth="true" Variant="Variant.Outlined" Lines="3"/>
+                    <ValidationMessage For="() => Model.Description"></ValidationMessage>
+                </div>
+                <div>
+                    <MudDatePicker @bind-Date="Model.Deadline" Label="Deadline" InputVariant="Variant.Outlined"/>
+                    <ValidationMessage For="() => Model.Deadline"></ValidationMessage>
+                </div>
+            </EditForm>
         </div>
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Description" Label="Description" Dense="true" Outlined="true" TextArea="true"></MatTextField>
-            <ValidationMessage For="() => Model.Description" />
-        </div>
-        <div class="col col-12 p-1">
-            <MatDatePicker class="w-100" @bind-Value="Model.Deadline" Dense="true" Label="Deadline" Format="yyyy-MM-dd" Outlined="true" AllowInput="false"></MatDatePicker>
-            <ValidationMessage For="() => Model.Deadline" />
-        </div>
-    </EditForm>
-</div>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Save">Save</MudButton>
+    </DialogActions>
+</MudDialog>
