--- a/EventManager.Client/Shared/Components/Friends/FriendRequestDialog.razor
+++ b/EventManager.Client/Shared/Components/Friends/FriendRequestDialog.razor
@@ -1,13 +1,21 @@
-<div class="w-100">
-    <EditForm EditContext="@Context">
-        <DataAnnotationsValidator/>
-            <div class="col col-12 p-1">
-                <MatTextField class="w-100" @bind-Value="Model.DestinationUserName" Label="User Name" Dense="true" Outlined="true"></MatTextField>
-                <ValidationMessage For="() => Model.DestinationUserName"/>
-            </div>
-            <div class="col col-12 p-1">
-                <MatTextField class="w-100" @bind-Value="Model.Message" Label="Message" Dense="true" Outlined="true"></MatTextField>
-                <ValidationMessage For="() => Model.Message"/>
-            </div>
-    </EditForm>
-</div>
+<MudDialog>
+    <DialogContent>
+        <div>
+            <EditForm EditContext="Context">
+                <DataAnnotationsValidator></DataAnnotationsValidator>
+                <div>
+                    <MudTextField @bind-Value="Model.DestinationUserName" Label="User" FullWidth="true" Variant="Variant.Outlined"/>
+                    <ValidationMessage For="() => Model.DestinationUserName"></ValidationMessage>
+                </div>
+                <div>
+                    <MudTextField @bind-Value="Model.Message" Label="Message" FullWidth="true" Variant="Variant.Outlined" />
+                    <ValidationMessage For="() => Model.Message"></ValidationMessage>
+                </div>
+            </EditForm>
+        </div>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Save">Save</MudButton>
+    </DialogActions>
+</MudDialog>
